apps/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: manafishrov-vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  serviceName: vaultwarden-internal
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.4@sha256:2bb2e0344616c62a6d76ea10558497499f8ed3f731400e143dc7bf17b757b5b9
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /alive
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /alive
              port: http
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /alive
              port: http
            periodSeconds: 10
            failureThreshold: 18
          volumeMounts:
            - mountPath: /data
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: nvme-ha
