apps/vaultwarden/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-internal
  namespace: manafishrov-vaultwarden
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: manafishrov-vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
