apps/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-public
  namespace: manafishrov-vaultwarden
spec:
  parentRefs:
    - name: public
      namespace: gateway
      sectionName: https
  hostnames:
    - vault.manafishrov.com
  rules:
    - backendRefs:
        - name: vaultwarden
          port: 80
